# llm_monkey

./: .gitignore  README.md  next_word_predictor.py  pyproject.toml
static/: PROMPTS.txt
